// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertiesTable PropertiesTable component should render empty when data isn't present 1`] = `
<styled.div>
  <Styled(styled.div)>
    No data available
  </Styled(styled.div)>
  <TabHelpMessage
    agentName="java"
    tabKey="kubernetes"
  />
</styled.div>
`;

exports[`PropertiesTable PropertiesTable component should render with data 1`] = `
<styled.div>
  <NestedKeyValueTable
    data={
      Object {
        "a": "hello",
        "b": "bananas",
      }
    }
    depth={1}
    parentKey="kubernetes"
  />
  <TabHelpMessage
    agentName="java"
    tabKey="kubernetes"
  />
</styled.div>
`;

exports[`PropertiesTable PropertiesTable component should still render NestedKeyValueTable even when data has no keys 1`] = `
<styled.div>
  <NestedKeyValueTable
    data={Object {}}
    depth={1}
    parentKey="kubernetes"
  />
  <TabHelpMessage
    agentName="java"
    tabKey="kubernetes"
  />
</styled.div>
`;

exports[`PropertiesTable TabHelpMessage component should render null empty string when no docs are returned 1`] = `""`;

exports[`PropertiesTable TabHelpMessage component should render when docs are returned 1`] = `
<styled.div>
  <Styled(EuiIcon)
    type="iInCircle"
  />
  You can configure your agent to add contextual information about your users.
   
  <EuiLink
    color="primary"
    href="mock-url"
    rel="noopener"
    target="_blank"
    type="button"
  >
    Learn more in the documentation.
  </EuiLink>
</styled.div>
`;
